# JX3-JCL-Service

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  build_local.py  docker-compose.yml  fly.toml  local_launcher.py  pyproject.toml  render.yaml  requirements.txt
Formulator/: README.md  requirements.txt
Formulator/.github/workflows/: nuitka-app.yml  pyinstaller-app.yml
Formulator/assets/: buffs.py  constant.py  mobile_skills.csv  skills.py
Formulator/general/gains/: __init__.py
Formulator/kungfus/: __init__.py
Formulator/kungfus/ao_xue_zhan_yi/: buffs.py  gains.py  skills.py
Formulator/kungfus/fen_shan_jing/: skills.py  talents.py
Formulator/kungfus/ming_zun_liu_li_ti/: gains.py
Formulator/kungfus/wu_fang/: __init__.py  buffs.py  dots.py  skills.py  talents.py
Formulator/qt/: app.py
Formulator/qt/components/: config.py  manual.py
Formulator/qt/scripts/: config.py  dashboard.py  manual.py
Formulator/tools/: generate_equipments.py
Formulator/utils/: parser.py
app/: convert.py  main.py  models.py  process_runner.py
app/static/: index.html
tests/: test_api.py  test_convert.py  test_formulator_runtime.py  test_process_runner.py
tests/fixtures/: TEST-JCL.json  TEST.jcl  TEST.json  TEST_output.json
